[metadata]
name = montecarlo
version = 0.3.1
summary = DOEgenerator for Monte Carlo Simulation 
description-file = README.txt
keywords = openmdao, Monte Carlo Simulation
home-page = 
download-url = 
author = Carlin Kersch
author-email = ckersch@asdl.gatech.edu
maintainer = Carlin Kersch
maintainer-email = ckersch@asdl.gatech.edu
license = GNU General Public License, version 2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = numpy
project-url =

[openmdao]
copyright = 
static_path = [ '_static' ]

